<resources>
    <string name="app_name">Graffic</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_custom">Custom</string>
    <string name="title_history">History</string>
    <string name="title_answer_mode">Answer Mode</string>
    <string name="button_enable">Enable</string>
    <string name="button_disable">Disable</string>
    <string name="text_view_enabled">Enabled</string>
    <string name="text_view_disabled">Disabled</string>
    <string name="edit_text_phone_number">Phone number</string>
    <string name="edit_text_amount">Amount</string>
    <string name="edit_text_call_duration">Call duration</string>
    <string name="edit_text_pause_duration">Pause duration (in between calls)</string>
    <string name="text_view_only_on">Only on:</string>
</resources>
