<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_custom">

    <fragment
        android:id="@+id/navigation_custom"
        android:name="com.graffic.ui.history.HistoryFragment"
        android:label="@string/title_custom"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.graffic.ui.custom.CustomFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_answer_mode"
        android:name="com.graffic.ui.answer.AnswerModeFragment"
        android:label="@string/title_answer_mode"
        tools:layout="@layout/fragment_answer_mode" />
</navigation>